# mochi-sonata

./: .gitignore  CMakeLists.txt  README.md  format.sh  spack.yaml
cmake/: FindUnQLite.cmake
examples/: 01_server.cpp  02_admin.cpp  03_client.cpp  04_database.cpp  05_collection.cpp  06_exec.cpp  CMakeLists.txt
examples/provdb/: CMakeLists.txt  README.md  client_margo.json  example_record.json  make-client-erf.py  make-server-config.py  make-server-erf.py  provdb_client.cpp  provdb_server.cpp  server_margo.json  sonata_config.json  summit.lfs  summit.yaml
hooks/: pre-commit  setup.sh
include/sonata/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Collection.hpp  Database.hpp  Exception.hpp  JsonSerialize.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp
src/: Admin.cpp  AdminImpl.hpp  AggregatorBackend.cpp  AggregatorBackend.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  Collection.cpp  CollectionImpl.hpp  Database.cpp  DatabaseImpl.hpp  Endian.hpp  JsonCppBackend.cpp  JsonCppBackend.hpp  LazyBackend.cpp  LazyBackend.hpp  NullBackend.cpp  NullBackend.hpp  Provider.cpp  ProviderImpl.hpp  RequestResult.hpp  UnQLiteBackend.cpp  UnQLiteBackend.hpp  UnQLiteJsonEncoder.hpp  UnQLiteMutex.cpp  UnQLiteMutex.hpp  UnQLiteVM.cpp  UnQLiteVM.hpp  UnQLiteValue.cpp  UnQLiteValue.hpp  VectorBackend.cpp  VectorBackend.hpp  sonata-admin.pc.in  sonata-client.pc.in  sonata-config.cmake.in  sonata-server.pc.in
src/invoke/: LICENSE.md  invoke.hpp
src/unqlite/: unqlite.c
test/: 00_basic.jx9  01_admin.jx9  01_db_attach_failing.jx9  01_db_create_failing.jx9  01_db_destroy_failing.jx9  01_db_detach_failing.jx9  02_client.jx9  03_execute.jx9  04_collection.jx9  AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  CollectionMultiTest.cpp  CollectionTest.cpp  CollectionTestBase.hpp  DatabaseTest.cpp  ExecTest.cpp  Jx9Test.cpp  Main.cpp  ProviderTest.cpp  test.json
